# CV_Parse_and_Score

./: CLAUDE.md  README.md  metadata.json  render.yaml  vite.config.ts
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-04-17-cv-engine-foundational-slice.md
docs/superpowers/specs/: 2026-04-17-cv-engine-foundational-slice-design.md
server/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
server/cv_engine/: cli.py  config.py  cost.py  models.py  pipeline.py  retry.py  web.py
server/cv_engine/extract/: haiku.py  prompt.py
server/cv_engine/ingest/: normalize.py
server/cv_engine/location/: classify.py
server/cv_engine/score/: created_date.py  prompt.py  rubric.py  sonnet.py
server/cv_engine/store/: connection.py  dao.py  schema.sql
server/prompts/: extract_v1.md  score_v1.md
server/rubrics/: v2_1.yaml
server/scripts/: regenerate_fixtures.py
server/tests/: conftest.py
server/tests/fixtures/cvs/: README.md
server/tests/integration/: test_cli.py  test_pipeline.py  test_rubric_seed.py  test_web.py
server/tests/unit/: test_config.py  test_connection.py  test_cost.py  test_created_date.py  test_dao.py  test_extract_prompt.py  test_haiku.py  test_location_classify.py  test_models.py  test_normalize.py  test_retry.py  test_rubric.py  test_score_prompt.py  test_sonnet.py  test_strlist_coercion.py
src/: App.tsx  index.css
src/components/Navigation/: Layout.tsx  SideNavBar.tsx  TopNavBar.tsx
src/lib/: api.ts
src/screens/: Alerts.tsx  Dashboard.tsx  Errors.tsx  NewContacts.tsx
